Fixed tak HTML documentation files

--- a/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid1.html
+++ b/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid1.html
@@ -1,4 +1,7 @@
-<View name="TakQuickstartAndroid1" path="quickstart/android1">
+<View
+  name="TakQuickstartAndroid1"
+  path="quickstart/android1"
+>
   <div class="pb-20">
     <Layout
       showNavbar="true"
@@ -23,25 +26,30 @@
             class="bg-backgroundLight"
           >
             <Description>takQuickstartAndroid1.unfoldableCard1.description1</Description>
-            <Image src="../../../../../../assets/icons/googleplay.png"
+            <Image
+              src="../../../../../../assets/icons/googleplay.png"
               link="https://play.google.com/store/apps/details?id=com.atakmap.app.civ"
-              class="w-[200px]"></Image>
+              class="w-[200px]"
+            ></Image>
             <Description>takQuickstartAndroid1.unfoldableCard1.description2</Description>
-            <Image src="../../../../../../assets/icons/googleplay.png"
+            <Image
+              src="../../../../../../assets/icons/googleplay.png"
               class="w-[200px]"
               link="https://play.google.com/store/apps/details?id=com.atakmap.android.datasync.plugin"
             ></Image>
           </UnfoldableCard>
           <UnfoldableCard
             title="takQuickstartAndroid1.unfoldableCard2.title"
-            class="bg-backgroundLight">
+            class="bg-backgroundLight"
+          >
             <Description>takQuickstartAndroid1.unfoldableCard2.description1</Description>
             <Description>
               <Button
                 variant='{width:"full"}'
                 onClick="downloadZip"
                 class="m-1 px-3 bg-success text-white w-full"
-              >serviceTak.grabZipButton</Button>
+              >serviceTak.grabZipButton
+              </Button>
             </Description>
             <Note>takQuickstartAndroid1.unfoldableCard2.note</Note>
           </UnfoldableCard>
@@ -50,8 +58,9 @@
             class="bg-backgroundLight"
           >
             <Description>takQuickstartAndroid1.unfoldableCard3.description1</Description>
-            <Image src="../../../../../../assets/takguides/atak/wait.png"
-                   class="m-3 w-[200px]"
+            <Image
+              src="../../../../../../assets/takguides/atak/wait.png"
+              class="m-3 w-[200px]"
             ></Image>
             <Description>takQuickstartAndroid1.unfoldableCard3.description2</Description>
           </UnfoldableCard>
