--- a/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid2.html
+++ b/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid2.html
@@ -1,4 +1,7 @@
-<View name="TakQuickstartAndroid2" path="quickstart/android2">
+<View
+  name="TakQuickstartAndroid2"
+  path="quickstart/android2"
+>
   <div class="pb-20">
     <Layout
       showNavbar="true"
@@ -23,8 +26,9 @@
             class="bg-backgroundLight"
           >
             <Description>TakQuickstartAndroid2.unfoldableCard1.description1</Description>
-            <Image class="m-3 w-[300px]"
-                  src="../../../../../../assets/takguides/atak/02-DataPackage.png"
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/02-DataPackage.png"
             ></Image>
             <Description>TakQuickstartAndroid2.unfoldableCard1.description2</Description>
           </UnfoldableCard>
