--- a/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid3.html
+++ b/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid3.html
@@ -1,4 +1,7 @@
-<View name="TakQuickstartAndroid3" path="quickstart/android3">
+<View
+  name="TakQuickstartAndroid3"
+  path="quickstart/android3"
+>
   <div class="pb-20">
     <Layout
       showNavbar="true"
@@ -10,51 +13,47 @@
         title="TakQuickstartAndroid3.statusBarTitle"
         progressMax="5"
         progressNow="3"
-      />
+      ></StatusBar>
       <CardsContainer>
         <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
           <ServiceInfoCard
             title="ATAK"
             image="../../../../../../assets/icons/tak-logo.png"
             details="TakQuickstartAndroid3.serviceInfoCard.details"
-              />
-            }
-          />
+          ></ServiceInfoCard>
           <UnfoldableCard
             title="TakQuickstartAndroid3.unfoldableCard1.title"
-            styling="bg-backgroundLight"
-            description1="TakQuickstartAndroid3.unfoldableCard1.description1"
-              />
-            }
-            imageSrc="../../../../../../assets/takguides/atak/10-Settings1.png"
-            imageClasses="m-3 w-[250px]"
-            description2="TakQuickstartAndroid3.unfoldableCard1.description2"
-              />
-            }
-          />
-          <UnfoldableCard title="TakQuickstartAndroid3.unfoldableCard2.title" />
-            }
-            styling="bg-backgroundLight"
-            description1="TakQuickstartAndroid3.unfoldableCard2.description1"
-              />
-            }
-            image2Src="../../../../../../assets/takguides/atak/15-MyTeam1.png"
-            image2Classes="m-3 w-[300px]"
-            description2="TakQuickstartAndroid3.unfoldableCard2.description2"
-              />
-            }
-            image3Src="../../../../../../assets/takguides/atak/16-MyRole1.png"
-            image3Classes="m-3 w-[300px]"
-            description3="TakQuickstartAndroid3.unfoldableCard2.description3"
-              />
-            }
-          />
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartAndroid3.unfoldableCard1.description1</Description>
+            <Image
+              class="m-3 w-[250px]"
+              src="../../../../../../assets/takguides/atak/10-Settings1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid3.unfoldableCard1.description2</Description>
+          </UnfoldableCard>
+          <UnfoldableCard
+            title="TakQuickstartAndroid3.unfoldableCard2.title"
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartAndroid3.unfoldableCard2.description1</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/15-MyTeam1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid3.unfoldableCard2.description2</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/16-MyRole1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid3.unfoldableCard2.description3</Description>
+          </UnfoldableCard>
         </div>
       </CardsContainer>
       <NavigateButtons
         backUrl="/app/services/tak/quickstart/android2"
         forwardUrl="/app/services/tak/quickstart/android4"
-      />
+      ></NavigateButtons>
     </Layout>
   </div>
 </View>
