--- a/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid4.html
+++ b/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid4.html
@@ -1,4 +1,7 @@
-<View name="TakQuickstartAndroid4" path="quickstart/android4">
+<View
+  name="TakQuickstartAndroid4"
+  path="quickstart/android4"
+>
   <div class="pb-20">
     <Layout
       showNavbar="true"
@@ -10,99 +13,105 @@
         title="TakQuickstartAndroid4.statusBarTitle"
         progressMax="5"
         progressNow="4"
-      />
+      ></StatusBar>
       <CardsContainer>
         <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
+
           <ServiceInfoCard
             title="ATAK"
             image="../../../../../../assets/icons/tak-logo.png"
             details="TakQuickstartAndroid4.serviceInfoCard.details"
-          />
+          ></ServiceInfoCard>
+
           <UnfoldableCard
             title="TakQuickstartAndroid4.unfoldableCard1.title"
-            styling="bg-backgroundLight"
-            steps={[
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard1.step1",
-                imageSrc: "../../../../../../assets/takguides/atak/atakdatasync111.jpg",
-                imageClasses: "m-3 w-[400px]",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard1.step2",
-                imageSrc: "../../../../../../assets/takguides/atak/atakdatasync12.jpg",
-                imageClasses: "m-3 w-[400px]",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard1.step3",
-                imageSrc: "../../../../../../assets/takguides/atak/atakdatasync13.jpg",
-                imageClasses: "m-3 w-[400px]",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard1.step4",
-                imageSrc: "../../../../../../assets/takguides/atak/atakdatasync14.jpg",
-                imageClasses: "m-3 w-[400px]",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard1.step5",
-              },
-            ]}
-          />
+            class="bg-backgroundLight"
+          >
+
+            <Description>TakQuickstartAndroid4.unfoldableCard1.step1</Description>
+            <Image
+              class="m-3 w-[400px]"
+              src="../../../../../../assets/takguides/atak/atakdatasync111.jpg"
+            ></Image>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard1.step2</Description>
+            <Image
+              class="m-3 w-[400px]"
+              src="../../../../../../assets/takguides/atak/atakdatasync12.jpg"
+            ></Image>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard1.step3</Description>
+            <Image
+              class="m-3 w-[400px]"
+              src="../../../../../../assets/takguides/atak/atakdatasync13.jpg"
+            ></Image>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard1.step4</Description>
+            <Image
+              class="m-3 w-[400px]"
+              src="../../../../../../assets/takguides/atak/atakdatasync14.jpg"
+            ></Image>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard1.step5</Description>
+
+          </UnfoldableCard>
+
           <UnfoldableCard
             title="TakQuickstartAndroid4.unfoldableCard2.title"
-            styling="bg-backgroundLight"
-            steps={[
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard2.step1",
-                imageSrc: "../../../../../../assets/takguides/atak/atakdatasync1.png",
-                imageClasses: "m-3 w-[400px]",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard2.step2",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard2.step3",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard2.step4",
-                imageSrc: "../../../../../../assets/takguides/atak/datasyncatak99.png",
-                imageClasses: "m-3 w-[400px]",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard2.step5",
-                imageSrc: "../../../../../../assets/takguides/atak/atakdatasync3.png",
-                imageClasses: "m-3 w-[400px]",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard2.step6",
-                note: "TakQuickstartAndroid4.unfoldableCard2.note",
-              },
-            ]}
-          />
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartAndroid4.unfoldableCard2.step1</Description>
+            <Image
+              class="m-3 w-[400px]"
+              src="../../../../../../assets/takguides/atak/atakdatasync1.png"
+            ></Image>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard2.step2</Description>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard2.step3</Description>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard2.step4</Description>
+            <Image
+              class="m-3 w-[400px]"
+              src="../../../../../../assets/takguides/atak/datasyncatak99.png"
+            ></Image>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard2.step5</Description>
+            <Image
+              class="m-3 w-[400px]"
+              src="../../../../../../assets/takguides/atak/atakdatasync3.png"
+            ></Image>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard2.step6</Description>
+            <Note>TakQuickstartAndroid4.unfoldableCard2.note</Note>
+
+          </UnfoldableCard>
+
           <UnfoldableCard
             title="TakQuickstartAndroid4.unfoldableCard3.title"
-            styling="bg-backgroundLight"
-            steps={[
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard3.step1",
-                imageSrc: "../../../../../../assets/takguides/atak/atakdatasync4.png",
-                imageClasses: "m-3 w-[400px]",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard3.step2",
-                imageSrc: "../../../../../../assets/takguides/atak/atakdatasync5.png",
-                imageClasses: "m-3 w-[400px]",
-              },
-              {
-                description: "TakQuickstartAndroid4.unfoldableCard3.step3",
-              },
-            ]}
-          />
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartAndroid4.unfoldableCard3.step1</Description>
+            <Image
+              class="m-3 w-[400px]"
+              src="../../../../../../assets/takguides/atak/atakdatasync4.png"
+            ></Image>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard3.step2</Description>
+            <Image
+              class="m-3 w-[400px]"
+              src="../../../../../../assets/takguides/atak/atakdatasync5.png"
+            ></Image>
+
+            <Description>TakQuickstartAndroid4.unfoldableCard3.step3</Description>
+          </UnfoldableCard>
+
         </div>
       </CardsContainer>
       <NavigateButtons
         backUrl="/app/services/tak/quickstart/android3"
         forwardUrl="/app/services/tak/quickstart/android5"
-      />
+      ></NavigateButtons>
     </Layout>
   </div>
 </View>
