--- a/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid5.html
+++ b/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid5.html
@@ -13,84 +13,119 @@
         title="TakQuickstartAndroid5.statusBarTitle"
         progressMax="5"
         progressNow="5"
-      />
+      ></StatusBar>
       <CardsContainer>
         <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
           <ServiceInfoCard
             title="ATAK"
             image="../../../../../../assets/icons/tak-logo.png"
             details="TakQuickstartAndroid5.serviceInfoCard.details"
-          />
+          ></ServiceInfoCard>
           <UnfoldableCard
             title="TakQuickstartAndroid5.unfoldableCard1.title"
-          styling="bg-backgroundLight"
-          description1="TakQuickstartAndroid5.unfoldableCard1.description1"
-          image2Src="../../../../../../assets/takguides/atak/07-Kartta1.png"
-          image2Classes="m-3 w-[300px]"
-          description2="TakQuickstartAndroid5.unfoldableCard1.description2"
-          image3Src="../../../../../../assets/takguides/atak/08-OK1.png"
-          image3Classes="m-3 w-[300px]"
-          description3="TakQuickstartAndroid5.unfoldableCard1.description3"
-          image4Src="../../../../../../assets/takguides/atak/08-OK1.png"
-          image4Classes="m-3 w-[300px]"
-          description4="TakQuickstartAndroid5.unfoldableCard1.description4"
-          />
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartAndroid5.unfoldableCard1.description1</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/07-Kartta1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard1.description2</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/08-OK1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard1.description3</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/08-OK1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard1.description4</Description>
+          </UnfoldableCard>
           <UnfoldableCard
             title="TakQuickstartAndroid5.unfoldableCard2.title"
-          styling="bg-backgroundLight"
-          description1="TakQuickstartAndroid5.unfoldableCard2.description1"
-          image2Src="../../../../../../assets/takguides/atak/17-settings2.png"
-          image2Classes="m-3 w-[300px]"
-          description2="TakQuickstartAndroid5.unfoldableCard2.description2"
-          image3Src="../../../../../../assets/takguides/atak/18-DisplaySettings1.png"
-          image3Classes="m-3 w-[300px]"
-          description3="TakQuickstartAndroid5.unfoldableCard2.description3"
-          image4Src="../../../../../../assets/takguides/atak/19-UnitDisplay1.png"
-          image4Classes="m-3 w-[300px]"
-          description4="TakQuickstartAndroid5.unfoldableCard2.description4"
-          image5Src="../../../../../../assets/takguides/atak/20-Altitude1.png"
-          image5Classes="m-3 w-[300px]"
-          description5="TakQuickstartAndroid5.unfoldableCard2.description5"
-          image6Src="../../../../../../assets/takguides/atak/21-UnitFormat1.png"
-          image6Classes="m-3 w-[300px]"
-          description6="TakQuickstartAndroid5.unfoldableCard2.description6"
-          image7Src="../../../../../../assets/takguides/atak/24-SpeedUnits1.png"
-          image7Classes="m-3 w-[300px]"
-          description7="TakQuickstartAndroid5.unfoldableCard2.description7"
-          image8Src="../../../../../../assets/takguides/atak/25-MetersToKilo1.png"
-          image8Classes="m-3 w-[300px]"
-          description8="TakQuickstartAndroid5.unfoldableCard2.description8"
-          image9Src="../../../../../../assets/takguides/atak/25-MetersToKilo1.png"
-          image9Classes="m-3 w-[300px]"
-          description9="TakQuickstartAndroid5.unfoldableCard2.description9"
-          imageSrc="../../../../../../assets/takguides/atak/26-10001.png"
-          imageClasses="m-3 w-[300px]"
-          description15="TakQuickstartAndroid5.unfoldableCard2.description15"
-          />
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartAndroid5.unfoldableCard2.description1</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/26-10001.png"
+            ></Image>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/17-settings2.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard2.description2</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/18-DisplaySettings1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard2.description3</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/19-UnitDisplay1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard2.description4</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/20-Altitude1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard2.description5</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/21-UnitFormat1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard2.description6</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/24-SpeedUnits1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard2.description7</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/25-MetersToKilo1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard2.description8</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/25-MetersToKilo1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard2.description9</Description>
+            <Description>TakQuickstartAndroid5.unfoldableCard2.description15</Description>
+          </UnfoldableCard>
           <UnfoldableCard
             title="TakQuickstartAndroid5.unfoldableCard3.title"
-          styling="bg-backgroundLight"
-          description1="TakQuickstartAndroid5.unfoldableCard3.description1"
-          image2Src="../../../../../../assets/takguides/atak/11-Callsign1.png"
-          image2Classes="m-3 w-[300px]"
-          description2="TakQuickstartAndroid5.unfoldableCard3.description2"
-          image3Src="../../../../../../assets/takguides/atak/12-Csprefs1.png"
-          image3Classes="m-3 w-[300px]"
-          description4="TakQuickstartAndroid5.unfoldableCard3.description4"
-          image5Src="../../../../../../assets/takguides/atak/13-MyCallsign1.png"
-          image5Classes="m-3 w-[300px]"
-          description5="TakQuickstartAndroid5.unfoldableCard3.description5"
-          image6Src="../../../../../../assets/takguides/atak/14-OmaPeite1.png"
-          image6Classes="m-3 w-[300px]"
-          description7="TakQuickstartAndroid5.unfoldableCard3.description7"
-          />
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartAndroid5.unfoldableCard3.description1</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/11-Callsign1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard3.description2</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/12-Csprefs1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard3.description4</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/13-MyCallsign1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard3.description5</Description>
+            <Image
+              class="m-3 w-[300px]"
+              src="../../../../../../assets/takguides/atak/14-OmaPeite1.png"
+            ></Image>
+            <Description>TakQuickstartAndroid5.unfoldableCard3.description7</Description>
+          </UnfoldableCard>
         </div>
       </CardsContainer>
       <NavigateButtons
         backUrl="/app/services/tak/quickstart/android4"
         forwardUrl="/app/services/tak/quickstart"
         alterForward="TakQuickstartAndroid5.alterForward"
-      />
+      ></NavigateButtons>
     </Layout>
   </div>
 </View>
