--- a/src/views/products/data/tak/quickstart/ios/TakQuickstartIos1.html
+++ b/src/views/products/data/tak/quickstart/ios/TakQuickstartIos1.html
@@ -12,44 +12,43 @@
     <StatusBar
       title="TakQuickstartIos1.statusBarTitle"
       progressMax="5"
-      progressNow={1}
-    />
+      progressNow="1"
+    ></StatusBar>
     <CardsContainer>
       <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
         <ServiceInfoCard
           title="iTAK"
           image="../../../../../../assets/icons/iTAK.png"
           details=TakQuickstartIos1.serviceInfoCard.details"
-        />
+        ></ServiceInfoCard>
         <UnfoldableCard
           title="TakQuickstartIos1.unfoldableCard1.title"
-          styling="bg-backgroundLight"
-          description1="TakQuickstartIos1.unfoldableCard1.description1"
-          image2Src="../../../../../../assets/icons/appstore.svg"
-          image2Link="https://apps.apple.com/us/app/itak/id1561656396"
-          image2Classes="w-[200px]"
-        />
+          class="bg-backgroundLight"
+        >
+          <Description>TakQuickstartIos1.unfoldableCard1.description1</Description>
+          <a href="https://apps.apple.com/us/app/itak/id1561656396">
+            <Image class="w-[200px]" src="../../../../../../assets/icons/appstore.svg"></Image>
+          </a>
+        </UnfoldableCard>
         <UnfoldableCard
           title="TakQuickstartIos1.unfoldableCard2.title"
-          styling="bg-backgroundLight"
-          description1=TakQuickstartIos1.unfoldableCard2.description1"
-          description2={
+          class="bg-backgroundLight"
+        >
+          <Description>TakQuickstartIos1.unfoldableCard2.description1</Description>
+          <Description>
             <Button
               variant={{ width: "full" }}
-              onClick="downloadZip"
-              styling="m-1 px-3 bg-success text-white w-full"
-            >
-              "serviceTak.grabZipButton"
-            </Button>
-          }
-          note="TakQuickstartIos1.unfoldableCard2.note"
-        />
+                onClick="downloadZip"
+              class="m-1 px-3 bg-success text-white w-full"
+            >serviceTak.grabZipButton</Button>
+          </Description>
+          <Note>TakQuickstartIos1.unfoldableCard2.note</Note>
+        </UnfoldableCard>
       </div>
     </CardsContainer>
-
     <NavigateButtons
       backUrl="/app/services/tak/quickstart"
       forwardUrl="/app/services/tak/quickstart/ios2"
-    />
+    ></NavigateButtons>
   </Layout>
 </div>
