--- a/src/views/products/data/tak/quickstart/ios/TakQuickstartIos2.html
+++ b/src/views/products/data/tak/quickstart/ios/TakQuickstartIos2.html
@@ -12,61 +12,57 @@
       <StatusBar
         title="TakQuickstartIos2.statusBarTitle"
         progressMax="5"
-        progressNow={2}
-      />
+        progressNow="2"
+      ></StatusBar>
       <CardsContainer>
         <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
           <ServiceInfoCard
             title="iTAK"
             image="../../../../../../assets/icons/iTAK.png"
             details="TakQuickstartIos2.serviceInfoCard.details"
-          />
+          ></ServiceInfoCard>
           <UnfoldableCard
             title="TakQuickstartIos2.unfoldableCard1.title"
-          styling="bg-backgroundLight"
-          description1="TakQuickstartIos2.unfoldableCard1.description1"
-          image2Src="../../../../../../assets/takguides/itak/itakquickstart1.png"
-          image2Classes="mx-auto pr-5 w-[240px] p-4"
-          />
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartIos2.unfoldableCard1.description1</Description>
+            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart1.png"></Image>
+          </UnfoldableCard>
           <UnfoldableCard
             title="TakQuickstartIos2.unfoldableCard2.title"
-          styling="bg-backgroundLight"
-          description1="TakQuickstartIos2.unfoldableCard2.description1"
-          image2Src="../../../../../../assets/takguides/itak/itakquickstart2.png"
-          image2Classes="mx-auto pr-5 w-[240px] p-4"
-          description2="TakQuickstartIos2.unfoldableCard2.description2"
-          />
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartIos2.unfoldableCard2.description1</Description>
+            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart2.png"></Image>
+            <Description>TakQuickstartIos2.unfoldableCard2.description2</Description>
+          </UnfoldableCard>
           <UnfoldableCard
             title="TakQuickstartIos2.unfoldableCard3.title"
-          styling="bg-backgroundLight"
-          description1="TakQuickstartIos2.unfoldableCard3.description1"
-          image2Src="../../../../../../assets/takguides/itak/itakquickstart3.png"
-          image2Classes="mx-auto pr-5 w-[240px] p-4"
-          description2="TakQuickstartIos2.unfoldableCard3.description2"
-          />
-          }
-          />
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartIos2.unfoldableCard3.description1</Description>
+            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart3.png"></Image>
+            <Description>TakQuickstartIos2.unfoldableCard3.description2</Description>
+          </UnfoldableCard>
           <UnfoldableCard
             title="TakQuickstartIos2.unfoldableCard4.title"
-          styling="bg-backgroundLight"
-          description1="TakQuickstartIos2.unfoldableCard4.description1"
-          image2Src="../../../../../../assets/takguides/itak/itakquickstart4.png"
-          image2Classes="mx-auto pr-5 w-[240px] p-4"
-          description2="TakQuickstartIos2.unfoldableCard4.description2"
-          image3Src="../../../../../../assets/takguides/itak/itakquickstart5.png"
-          image3Classes="mx-auto pr-5 w-[240px] p-4"
-          description3="TakQuickstartIos2.unfoldableCard4.description3"
-          image4Src="../../../../../../assets/takguides/itak/itakquickstart7.png"
-          image4Classes="mx-auto pr-5 w-[240px] p-4"
-          description4="TakQuickstartIos2.unfoldableCard4.description4"
-          />
+            class="bg-backgroundLight"
+          >
+            <Description>TakQuickstartIos2.unfoldableCard4.description1</Description>
+            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart4.png"></Image>
+            <Description>TakQuickstartIos2.unfoldableCard4.description2</Description>
+            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart5.png"></Image>
+            <Description>TakQuickstartIos2.unfoldableCard4.description3</Description>
+            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart7.png"></Image>
+            <Description>TakQuickstartIos2.unfoldableCard4.description4</Description>
+          </UnfoldableCard>
         </div>
       </CardsContainer>
 
       <NavigateButtons
         backUrl="/app/services/tak/quickstart/ios1"
         forwardUrl="/app/services/tak/quickstart/ios3"
-      />
+      ></NavigateButtons>
     </Layout>
   </div>
 </View>
