--- a/src/views/products/data/tak/quickstart/ios/TakQuickstartIos5.html
+++ b/src/views/products/data/tak/quickstart/ios/TakQuickstartIos5.html
@@ -23,7 +23,7 @@
             />
             <UnfoldableCard
               title="TakQuickstartIos5.unfoldableCard1.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakQuickstartIos5.unfoldableCard1.step1",
@@ -34,7 +34,7 @@
             />
             <UnfoldableCard
               title="TakQuickstartIos5.unfoldableCard2.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakQuickstartIos5.unfoldableCard2.step1",
@@ -54,7 +54,7 @@
             />
             <UnfoldableCard
               title="TakQuickstartIos5.unfoldableCard3.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakQuickstartIos5.unfoldableCard3.step1",
