--- a/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin1.html
+++ b/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin1.html
@@ -11,64 +11,58 @@
       >
         <StatusBar
           title="TakQuickstartWin1.statusBarTitle"
-          progressMax={4}
-          progressNow={1}
-        />
+          progressMax="4"
+          progressNow="1"
+        ></StatusBar>
         <CardsContainer>
           <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="WinTAK"
               image="../../../../../../assets/icons/wintak.png"
               details="TakQuickstartWin1.serviceInfoCard.details"
-            />
+            ></ServiceInfoCard>
             <UnfoldableCard
               title="TakQuickstartWin1.unfoldableCard1.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin1.unfoldableCard1.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva1.png"
-              image2Classes="mx-auto pr-12 w-[240px] p-4"
-              description2="TakQuickstartWin1.unfoldableCard1.description2"
-              image3Src="../../../../../../assets/takguides/wintak/Kuva2.png"
-              image3Classes="mx-auto pr-12 w-[240px] p-4"
-              description3="TakQuickstartWin1.unfoldableCard1.description3"
-              image4Src="../../../../../../assets/takguides/wintak/Kuva3.png"
-              image4Classes="mx-auto pr-12 w-[400px] p-4"
-              description4="TakQuickstartWin1.unfoldableCard1.description4"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin1.unfoldableCard1.description1</Description>
+              <Image class="mx-auto pr-12 w-[240px] p-4" src="../../../../../../assets/takguides/wintak/Kuva1.png"></Image>
+              <Description>TakQuickstartWin1.unfoldableCard1.description2</Description>
+              <Image class="mx-auto pr-12 w-[240px] p-4" src="../../../../../../assets/takguides/wintak/Kuva2.png"></Image>
+              <Description>TakQuickstartWin1.unfoldableCard1.description3</Description>
+              <Image class="mx-auto pr-12 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva3.png"></Image>
+              <Description>TakQuickstartWin1.unfoldableCard1.description4</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin1.unfoldableCard2.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin1.unfoldableCard2.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva4.png"
-              image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2="TakQuickstartWin1.unfoldableCard2.description2"
-              image3Src="../../../../../../assets/takguides/wintak/Kuva5.png"
-              image3Classes="mx-auto pr-5 w-[400px] p-4"
-              description3="TakQuickstartWin1.unfoldableCard2.description3"
-              image4Src="../../../../../../assets/takguides/wintak/Kuva8.png"
-              image4Classes="mx-auto pr-5 w-[400px] p-4"
-              description4="TakQuickstartWin1.unfoldableCard2.description4"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin1.unfoldableCard2.description1</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva4.png"></Image>
+              <Description>TakQuickstartWin1.unfoldableCard2.description2</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva5.png"></Image>
+              <Description>TakQuickstartWin1.unfoldableCard2.description3</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva8.png"></Image>
+              <Description>TakQuickstartWin1.unfoldableCard2.description4</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin1.unfoldableCard3.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin1.unfoldableCard3.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva6.png"
-              image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2="TakQuickstartWin1.unfoldableCard3.description2"
-              image3Src="../../../../../../assets/takguides/wintak/Kuva7.png"
-              image3Classes="mx-auto pr-5 w-[400px] p-4"
-              description3="TakQuickstartWin1.unfoldableCard3.description3"
-              image4Src="../../../../../../assets/takguides/wintak/Kuva8.png"
-              image4Classes="mx-auto pr-5 w-[400px] p-4"
-              description4="TakQuickstartWin1.unfoldableCard3.description4"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin1.unfoldableCard3.description1</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva6.png"></Image>
+              <Description>TakQuickstartWin1.unfoldableCard3.description2</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva7.png"></Image>
+              <Description>TakQuickstartWin1.unfoldableCard3.description3</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva8.png"></Image>
+              <Description>TakQuickstartWin1.unfoldableCard3.description4</Description>
+            </UnfoldableCard>
           </div>
         </CardsContainer>
         <NavigateButtons
           backUrl="/app/services/tak/quickstart"
           forwardUrl="/app/services/tak/quickstart/win2"
-        />
+        ></NavigateButtons>
       </Layout>
     </div>
 </View>
