--- a/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin2.html
+++ b/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin2.html
@@ -11,75 +11,71 @@
       >
         <StatusBar
           title="TakQuickstartWin2.statusBarTitle"
-          progressMax={4}
-          progressNow={2}
-        />
+          progressMax="4"
+          progressNow="2"
+        ></StatusBar>
         <CardsContainer>
           <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="WinTAK"
               image="../../../../../../assets/icons/wintak.png"
               details="TakQuickstartWin2.serviceInfoCard.details"
-            />
+            ></ServiceInfoCard>
             <UnfoldableCard
               title="TakQuickstartWin2.unfoldableCard1.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin2.unfoldableCard1.description1"
-              image2Src="../../../../../../assets/icons/windownload.svg"
-              image2Link="https://arkipublic.blob.core.windows.net/ohjelmistot/WinTAK-CIV-latest.zip"
-              image2Classes="w-[200px]"
-              note="TakQuickstartWin2.unfoldableCard1.note"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin2.unfoldableCard1.description1</Description>
+              <a href="https://arkipublic.blob.core.windows.net/ohjelmistot/WinTAK-CIV-latest.zip">
+                <Image class="w-[200px]" src="../../../../../../assets/icons/windownload.svg"></Image>
+              </a>
+              <Note>TakQuickstartWin2.unfoldableCard1.note</Note>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin2.unfoldableCardDownload.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin2.unfoldableCardDownload.description1"
-              description2={
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin2.unfoldableCardDownload.description1</Description>
+              <Description>
                 <Button
                   variant={{ width: "full" }}
-                  onClick={handleDownloadButtonClick}
-                  styling="m-1 px-3 bg-success text-white w-full"
-                >
-                  "serviceTak.grabZipButton"
-                </Button>
-              }
-              note="TakQuickstartIos1.unfoldableCard2.note"
-            />
+                    onClick={handleDownloadButtonClick}
+                  class="m-1 px-3 bg-success text-white w-full"
+                >serviceTak.grabZipButton</Button>
+              </Description>
+              <Note>TakQuickstartIos1.unfoldableCard2.note</Note>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin2.unfoldableCard2.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin2.unfoldableCard2.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva9.png"
-              image2Classes="mx-auto pr-5 w-[290px] p-4"
-              description2="TakQuickstartWin2.unfoldableCard2.description2"
-            />
+              class="bg-backgroundLight"
+             >
+              <Description>TakQuickstartWin2.unfoldableCard2.description1</Description>
+              <Image class="mx-auto pr-5 w-[290px] p-4" src="../../../../../../assets/takguides/wintak/Kuva9.png"></Image>
+              <Description>TakQuickstartWin2.unfoldableCard2.description2</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin2.unfoldableCard3.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin2.unfoldableCard3.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva10.png"
-              image2Classes="mx-auto pr-5 w-[300px] p-4"
-              description2="TakQuickstartWin2.unfoldableCard3.description2"
-              image3Src="../../../../../../assets/takguides/wintak/Kuva11.png"
-              image3Classes="mx-auto pr-5 w-[300px] p-4"
-              description3="TakQuickstartWin2.unfoldableCard3.description3"
-              image4Src="../../../../../../assets/takguides/wintak/Kuva12.png"
-              image4Classes="mx-auto pr-5 w-[300px] p-4"
-              description4="TakQuickstartWin2.unfoldableCard3.description4"
-              image5Src="../../../../../../assets/takguides/wintak/Kuva13.png"
-              image5Classes="mx-auto pr-5 w-[300px] p-4"
-              description5="TakQuickstartWin2.unfoldableCard3.description5"
-              image6Src="../../../../../../assets/takguides/wintak/Kuva13-1.png"
-              image6Classes="mx-auto pr-5 w-[300px] p-4"
-              description6="TakQuickstartWin2.unfoldableCard3.description6"
-              description7="TakQuickstartWin2.unfoldableCard3.description7"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin2.unfoldableCard3.description1</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva10.png"></Image>
+              <Description>TakQuickstartWin2.unfoldableCard3.description2</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva11.png"></Image>
+              <Description>TakQuickstartWin2.unfoldableCard3.description3</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva12.png"></Image>
+              <Description>TakQuickstartWin2.unfoldableCard3.description4</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva13.png"></Image>
+              <Description>TakQuickstartWin2.unfoldableCard3.description5</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva13-1.png"></Image>
+              <Description>TakQuickstartWin2.unfoldableCard3.description6</Description>
+              <Description>TakQuickstartWin2.unfoldableCard3.description7</Description>
+            </UnfoldableCard>
           </div>
         </CardsContainer>
         <NavigateButtons
           backUrl="/app/services/tak/quickstart/win1"
           forwardUrl="/app/services/tak/quickstart/win3"
-        />
+        ></NavigateButtons>
       </Layout>
     </div>
 </View>
