--- a/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin3.html
+++ b/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin3.html
@@ -11,94 +11,89 @@
       >
         <StatusBar
           title="TakQuickstartWin3.statusBarTitle"
-          progressMax={4}
+          progressMax="4"
           progressNow="3"
-        />
+        ></StatusBar>
         <CardsContainer>
           <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="WinTAK"
               image="../../../../../../assets/icons/wintak.png"
               details="TakQuickstartWin3.serviceInfoCard.details"
-            />
+            ></ServiceInfoCard>
             <UnfoldableCard
               title="TakQuickstartWin3.unfoldableCard1.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin3.unfoldableCard1.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva14.png"
-              image2Classes="mx-auto pr-5 w-[90px] p-4"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin3.unfoldableCard1.description1</Description>
+              <Image class="mx-auto pr-5 w-[90px] p-4" src="../../../../../../assets/takguides/wintak/Kuva14.png"></Image>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin3.unfoldableCard2.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin3.unfoldableCard2.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva16.png"
-              image2Classes="mx-auto pr-5 w-[300px] p-4"
-              description2="TakQuickstartWin3.unfoldableCard2.description2"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin3.unfoldableCard2.description1</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva16.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard2.description2</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin3.unfoldableCard3.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin3.unfoldableCard3.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva17.png"
-              image2Classes="mx-auto pr-5 w-[300px] p-4"
-              description2="TakQuickstartWin3.unfoldableCard3.description2"
-              image3Src="../../../../../../assets/takguides/wintak/Kuva18.png"
-              image3Classes="mx-auto pr-5 w-[300px] p-4"
-              description3="TakQuickstartWin3.unfoldableCard3.description3"
-              image4Src="../../../../../../assets/takguides/wintak/Kuva19.png"
-              image4Classes="mx-auto pr-5 w-[300px] p-4"
-              description4="TakQuickstartWin3.unfoldableCard3.description4"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin3.unfoldableCard3.description1</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva17.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard3.description2</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva18.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard3.description3</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva19.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard3.description4</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin3.unfoldableCard4.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin3.unfoldableCard4.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva20.png"
-              image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2="TakQuickstartWin3.unfoldableCard4.description2"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin3.unfoldableCard4.description1</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva20.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard4.description2</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin3.unfoldableCard5.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin3.unfoldableCard5.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva21.png"
-              image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2="TakQuickstartWin3.unfoldableCard5.description2"
-              image3Src="../../../../../../assets/takguides/wintak/Kuva23.png"
-              image3Classes="mx-auto pr-5 w-[400px] p-4"
-              description3="TakQuickstartWin3.unfoldableCard5.description3"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin3.unfoldableCard5.description1</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva21.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard5.description2</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva23.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard5.description3</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin3.unfoldableCard6.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin3.unfoldableCard6.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva24.png"
-              image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2="TakQuickstartWin3.unfoldableCard6.description2"
-              image3Src="../../../../../../assets/takguides/wintak/Kuva25.png"
-              image3Classes="mx-auto pr-5 w-[400px] p-4"
-              description3="TakQuickstartWin3.unfoldableCard6.description3"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin3.unfoldableCard6.description1</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva24.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard6.description2</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva25.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard6.description3</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakQuickstartWin3.unfoldableCard7.title"
-              styling="bg-backgroundLight"
-              description1="TakQuickstartWin3.unfoldableCard7.description1"
-              image2Src="../../../../../../assets/takguides/wintak/Kuva26.png"
-              image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2="TakQuickstartWin3.unfoldableCard7.description2"
-              note="TakQuickstartWin3.unfoldableCard7.note"
-              image4Src="../../../../../../assets/takguides/wintak/Kuva27.png"
-              image4Classes="mx-auto pr-10 w-[200px] p-4"
-              description3="TakQuickstartWin3.unfoldableCard7.description3"
-              description4="TakQuickstartWin3.unfoldableCard7.description4"
-            />
+              class="bg-backgroundLight"
+            >
+              <Description>TakQuickstartWin3.unfoldableCard7.description1</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva26.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard7.description2</Description>
+              <Note>TakQuickstartWin3.unfoldableCard7.note</Note>
+              <Image class="mx-auto pr-10 w-[200px] p-4" src="../../../../../../assets/takguides/wintak/Kuva27.png"></Image>
+              <Description>TakQuickstartWin3.unfoldableCard7.description3</Description>
+              <Description>TakQuickstartWin3.unfoldableCard7.description4</Description>
+            </UnfoldableCard>
           </div>
         </CardsContainer>
         <NavigateButtons
           backUrl="/app/services/tak/quickstart/win2"
           forwardUrl="/app/services/tak/quickstart/win4"
-        />
+        ></NavigateButtons>
       </Layout>
     </div>
 </View>
