--- a/src/views/products/data/tak/usage/android/TakUsageAndroid1.html
+++ b/src/views/products/data/tak/usage/android/TakUsageAndroid1.html
@@ -1,5 +1,5 @@
 <View name="TakUsageAndroid1" path="usage/android1">
-    <div class="pb-20">
+    <UnfoldableCard class="pb-20">
       <Layout
         showNavbar="true"
         showFooter="false"
@@ -8,22 +8,22 @@
       >
         <StatusBar
           title="TakUsageAndroid1.statusBarTitle"
-          progressMax={3}
-          progressNow={1}
-        />
+          progressMax="3"
+          progressNow="1"
+        ></StatusBar>
         <CardsContainer>
-          <ServiceTakUsageCard />
+          <ServiceTakUsageCard></ServiceTakUsageCard>
         </CardsContainer>
         <CardsContainer>
-          <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
+          <UnfoldableCard class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="ATAK"
               image="../../../../../../assets/icons/tak-logo.png"
               details="TakUsageAndroid1.serviceInfoCard.details"
-            />
+            ></ServiceInfoCard>
             <UnfoldableCard
               title="TakUsageAndroid1.unfoldableCard1.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakUsageAndroid1.unfoldableCard1.step1",
@@ -46,10 +46,10 @@
                   imageClasses: "align-right w-[50px]",
                 },
               ]}
-            />
+            ></UnfoldableCard>
             <UnfoldableCard
               title="TakUsageAndroid1.unfoldableCard2.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakUsageAndroid1.unfoldableCard2.step1",
@@ -71,13 +71,12 @@
                   imageClasses: "w-[300px]",
                 },
               ]}
-            />
-          </div>
+            /></UnfoldableCard>
         </CardsContainer>
         <NavigateButtons
           backUrl="/app/services/tak/Usage"
           forwardUrl="/app/services/tak/Usage/android2"
-        />
+        ></NavigateButtons>
       </Layout>
     </div>
 </View>
