--- a/src/views/products/data/tak/usage/android/TakUsageAndroid2.html
+++ b/src/views/products/data/tak/usage/android/TakUsageAndroid2.html
@@ -8,11 +8,11 @@
       >
         <StatusBar
           title="TakUsageAndroid2.statusBarTitle"
-          progressMax={3}
-          progressNow={2}
-        />
+          progressMax="3"
+          progressNow="2"
+        ></StatusBar>
         <CardsContainer>
-          <ServiceTakUsageCard />
+          <ServiceTakUsageCard></ServiceTakUsageCard>
         </CardsContainer>
         <CardsContainer>
           <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
@@ -20,10 +20,10 @@
               title="ATAK"
               image="../../../../../../assets/icons/tak-logo.png"
               details="TakUsageAndroid2.serviceInfoCard.details"
-            />
+            ></ServiceInfoCard>
             <UnfoldableCard
               title="TakUsageAndroid2.unfoldableCard1.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakUsageAndroid2.unfoldableCard1.step1",
@@ -34,7 +34,7 @@
             />
             <UnfoldableCard
               title="TakUsageAndroid2.unfoldableCard2.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakUsageAndroid2.unfoldableCard2.step1",
@@ -55,7 +55,7 @@
             />
             <UnfoldableCard
               title="TakUsageAndroid2.unfoldableCard3.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakUsageAndroid2.unfoldableCard3.step1",
@@ -92,12 +92,11 @@
                   note: "TakUsageAndroid2.unfoldableCard3.note",
                 },
               ]}
-            />
-
+            /></UnfoldableCard>
             <NavigateButtons
               backUrl="/app/services/tak/usage/android1"
               forwardUrl="/app/services/tak/usage/android3"
-            />
+            ></NavigateButtons>
           </div>
         </CardsContainer>
       </Layout>
