--- a/src/views/products/data/tak/usage/ios/TakUsageIos1.html
+++ b/src/views/products/data/tak/usage/ios/TakUsageIos1.html
@@ -8,19 +8,19 @@
       >
         <StatusBar
           title="TakUsageIos1.statusBarTitle"
-          progressMax={1}
-          progressNow={1}
-        />
+          progressMax="1"
+          progressNow="1"
+        ></StatusBar>
         <CardsContainer>
           <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="iTAK"
               image="../../../../../../assets/icons/iTAK.png"
               details="TakUsageIos1.serviceInfoCard.details"
-            />
+            ></ServiceInfoCard>
             <UnfoldableCard
               title="TakUsageIos1.unfoldableCard1.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakUsageIos1.unfoldableCard1.step1",
@@ -34,7 +34,7 @@
             />
             <UnfoldableCard
               title="TakUsageIos1.unfoldableCard2.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakUsageIos1.unfoldableCard2.step1",
@@ -56,7 +56,7 @@
             />
             <UnfoldableCard
               title="TakUsageIos1.unfoldableCard3.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakUsageIos1.unfoldableCard3.step1",
@@ -81,7 +81,7 @@
             />
             <UnfoldableCard
               title="TakUsageIos1.unfoldableCard4.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "TakUsageIos1.unfoldableCard4.step1",
@@ -99,7 +99,7 @@
           backUrl="/app/services/tak/usage"
           forwardUrl="/app/services/tak/usage"
           alterForward="TakUsageAndroid3.alterForward"
-        />
+        ></NavigateButtons>
       </Layout>
     </div>
     </View>
