--- a/src/views/products/data/tak/usage/wintak/TakUsageWin1.html
+++ b/src/views/products/data/tak/usage/wintak/TakUsageWin1.html
@@ -8,9 +8,9 @@
       >
         <StatusBar
           title="takUsageWin1.navbarTitle"
-          progressMax={4}
-          progressNow={1}
-        />
+          progressMax="4"
+          progressNow="1"
+        ></StatusBar>
         <CardsContainer>
           <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
@@ -18,11 +18,11 @@
               image="../../../../../../assets/icons/wintak.png"
               details="takUsageWin1.serviceInfoCard.details"
             >
-              <ServiceTakUsageCard />
+              <ServiceTakUsageCard></ServiceTakUsageCard>
             </ServiceInfoCard>
             <UnfoldableCard
               title="takUsageWin1.unfoldableCard1.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin1.unfoldableCard1.step1",
@@ -48,7 +48,7 @@
             />
             <UnfoldableCard
               title="takUsageWin1.unfoldableCard2.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin1.unfoldableCard2.step1",
@@ -67,7 +67,7 @@
             />
             <UnfoldableCard
               title="takUsageWin1.unfoldableCard3.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin1.unfoldableCard3.step1",
@@ -84,7 +84,7 @@
         <NavigateButtons
           backUrl="/app/services/tak/usage"
           forwardUrl="/app/services/tak/usage/win2"
-        />
+        ></NavigateButtons>
       </Layout>
     </div>
     </View>
