--- a/src/views/products/data/tak/usage/wintak/TakUsageWin2.html
+++ b/src/views/products/data/tak/usage/wintak/TakUsageWin2.html
@@ -8,9 +8,9 @@
       >
         <StatusBar
           title="takUsageWin2.navbarTitle"
-          progressMax={4}
-          progressNow={2}
-        />
+          progressMax="4"
+          progressNow="2"
+        ></StatusBar>
         <CardsContainer>
           <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
@@ -18,11 +18,11 @@
               image="../../../../../../assets/icons/wintak.png"
               details="takUsageWin2.serviceInfoCard.details"
             >
-              <ServiceTakUsageCard />
+              <ServiceTakUsageCard></ServiceTakUsageCard>
             </ServiceInfoCard>
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard1.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin2.unfoldableCard1.step1",
@@ -51,7 +51,7 @@
 
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard2.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin2.unfoldableCard2.step1",
@@ -70,7 +70,7 @@
             />
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard3.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin2.unfoldableCard3.step1",
@@ -89,7 +89,7 @@
             />
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard4.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin2.unfoldableCard4.step1",
@@ -125,7 +125,7 @@
             />
             <UnfoldableCard
               title="takUsageWin2.unfoldableCardExample.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin2.unfoldableCardExample.step1",
@@ -150,7 +150,7 @@
             />
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard5.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin2.unfoldableCard5.step1",
@@ -160,7 +160,7 @@
             />
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard7.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin2.unfoldableCard7.step1",
