--- a/src/views/products/data/tak/usage/wintak/TakUsageWin3.html
+++ b/src/views/products/data/tak/usage/wintak/TakUsageWin3.html
@@ -8,9 +8,9 @@
       >
         <StatusBar
           title="takUsageWin3.navbarTitle"
-          progressMax={4}
+          progressMax="4"
           progressNow="3"
-        />
+        ></StatusBar>
         <CardsContainer>
           <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
@@ -18,11 +18,11 @@
               image="../../../../../../assets/icons/wintak.png"
               details="takUsageWin3.serviceInfoCard.details"
             >
-              <ServiceTakUsageCard />
+              <ServiceTakUsageCard></ServiceTakUsageCard>
             </ServiceInfoCard>
             <UnfoldableCard
               title="takUsageWin3.unfoldableCard1.title"
-              styling="bg-backgroundLight"
+              class="bg-backgroundLight"
               steps={[
                 {
                   description: "takUsageWin3.unfoldableCard1.step1",
@@ -41,7 +41,7 @@
         <NavigateButtons
           backUrl="/app/services/tak/usage/win2"
           forwardUrl="/app/services/tak/usage/win4"
-        />
+        ></NavigateButtons>
       </Layout>
     </div>
 </View>
