Fixed tak usage HTML documents

--- a/src/views/products/data/tak/usage/ios/TakUsageIos1.html
+++ b/src/views/products/data/tak/usage/ios/TakUsageIos1.html
@@ -21,78 +21,52 @@
             <UnfoldableCard
               title="TakUsageIos1.unfoldableCard1.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageIos1.unfoldableCard1.step1",
-                },
-                {
-                  description: "TakUsageIos1.unfoldableCard1.step2",
-                  imageSrc: "../../../../../../assets/takguides/itak/itakusage1.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-              ]}
-            />
+            >
+              <Description>TakUsageIos1.unfoldableCard1.step1</Description>
+              <Description>TakUsageIos1.unfoldableCard1.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/itak/itakusage1.png"></Image>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakUsageIos1.unfoldableCard2.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageIos1.unfoldableCard2.step1",
-                },
-                {
-                  description: "TakUsageIos1.unfoldableCard2.step2",
-                  imageSrc: "../../../../../../assets/takguides/itak/itakusage2.png",
-                  imageClasses: "m-3 w-[300px]",
-                },
-                {
-                  description: "TakUsageIos1.unfoldableCard2.step3",
-                  imageSrc: "../../../../../../assets/takguides/itak/itakusage31.png",
-                  imageClasses: "m-3 w-[300px]",
-                },
-                {
-                  note: "TakUsageIos1.unfoldableCard2.note",
-                },
-              ]}
-            />
+            >
+              <Description>TakUsageIos1.unfoldableCard2.step1</Description>
+
+              <Description>TakUsageIos1.unfoldableCard2.step2</Description>
+              <Image class="m-3 w-[300px]" src="../../../../../../assets/takguides/itak/itakusage2.png"></Image>
+
+              <Description>TakUsageIos1.unfoldableCard2.step3</Description>
+              <Image class="m-3 w-[300px]" src="../../../../../../assets/takguides/itak/itakusage31.png"></Image>
+
+              <Note>TakUsageIos1.unfoldableCard2.note</Note>
+
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakUsageIos1.unfoldableCard3.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageIos1.unfoldableCard3.step1",
-                },
-                {
-                  description: "TakUsageIos1.unfoldableCard3.step2",
-                  imageSrc: "../../../../../../assets/takguides/itak/itakusage4.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "TakUsageIos1.unfoldableCard3.step3",
-                  imageSrc: "../../../../../../assets/takguides/itak/itakusage5.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "TakUsageIos1.unfoldableCard3.step4",
-                  imageSrc: "../../../../../../assets/takguides/itak/itakusage6.png",
-                  imageClasses: "m-3 w-[400px]",
-                  note: "TakUsageIos1.unfoldableCard3.note",
-                },
-              ]}
-            />
+            >
+
+              <Description>TakUsageIos1.unfoldableCard3.step1</Description>
+
+              <Description>TakUsageIos1.unfoldableCard3.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/itak/itakusage4.png"></Image>
+
+              <Description>TakUsageIos1.unfoldableCard3.step3</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/itak/itakusage5.png"></Image>
+
+              <Description>TakUsageIos1.unfoldableCard3.step4</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/itak/itakusage6.png"></Image>
+              <Note>TakUsageIos1.unfoldableCard3.note</Note>
+
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakUsageIos1.unfoldableCard4.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageIos1.unfoldableCard4.step1",
-                },
-                {
-                  description: "TakUsageIos1.unfoldableCard4.step2",
-                  imageSrc: "../../../../../../assets/takguides/itak/itakusage4.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-              ]}
-            />
+            >
+              <Description>TakUsageIos1.unfoldableCard4.step1</Description>
+              <Description>TakUsageIos1.unfoldableCard4.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/itak/itakusage4.png"></Image>
+            </UnfoldableCard>
           </div>
         </CardsContainer>
         <NavigateButtons
