--- a/src/views/products/data/tak/usage/wintak/TakUsageWin1.html
+++ b/src/views/products/data/tak/usage/wintak/TakUsageWin1.html
@@ -23,62 +23,34 @@
             <UnfoldableCard
               title="takUsageWin1.unfoldableCard1.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin1.unfoldableCard1.step1",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva32.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin1.unfoldableCard1.step2",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva33.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin1.unfoldableCard1.step3",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva34.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin1.unfoldableCard1.step4",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva35.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin1.unfoldableCard1.step1</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva32.png"></Image>
+              <Description>takUsageWin1.unfoldableCard1.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva33.png"></Image>
+              <Description>takUsageWin1.unfoldableCard1.step3</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva34.png"></Image>
+              <Description>takUsageWin1.unfoldableCard1.step4</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva35.png"></Image>
+            </UnfoldableCard>
             <UnfoldableCard
               title="takUsageWin1.unfoldableCard2.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin1.unfoldableCard2.step1",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva37.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin1.unfoldableCard2.step2",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva36.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin1.unfoldableCard2.step3",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin1.unfoldableCard2.step1</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva37.png"></Image>
+              <Description>takUsageWin1.unfoldableCard2.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva36.png"></Image>
+              <Description>takUsageWin1.unfoldableCard2.step3</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="takUsageWin1.unfoldableCard3.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin1.unfoldableCard3.step1",
-                },
-                {
-                  description: "takUsageWin1.unfoldableCard3.step2",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva38.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin1.unfoldableCard3.step1</Description>
+              <Description>takUsageWin1.unfoldableCard3.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva38.png"></Image>
+            </UnfoldableCard>
           </div>
         </CardsContainer>
         <NavigateButtons
