--- a/src/views/products/data/tak/usage/wintak/TakUsageWin2.html
+++ b/src/views/products/data/tak/usage/wintak/TakUsageWin2.html
@@ -23,175 +23,113 @@
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard1.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin2.unfoldableCard1.step1",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva39.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard1.step2",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva40.png",
-                  imageClasses: "m-3 w-[400px]",
-                  note: "takUsageWin2.unfoldableCard1.note1",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard1.step3",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva41.png",
-                  imageClasses: "m-3 w-[400px]",
-                  note: "takUsageWin2.unfoldableCard1.note2",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard1.step4",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva42.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin2.unfoldableCard1.step1</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva39.png"></Image>
+
+              <Description>takUsageWin2.unfoldableCard1.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva40.png"></Image>
+              <Note>takUsageWin2.unfoldableCard1.note1</Note>
+
+              <Description>takUsageWin2.unfoldableCard1.step3</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva41.png"></Image>
+              <Note>takUsageWin2.unfoldableCard1.note2</Note>
+
+              <Description>takUsageWin2.unfoldableCard1.step4</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva42.png"></Image>
+
+            </UnfoldableCard>
 
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard2.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin2.unfoldableCard2.step1",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva42.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard2.step2",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva43.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard2.step3",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin2.unfoldableCard2.step1</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva42.png"></Image>
+              <Description>takUsageWin2.unfoldableCard2.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva43.png"></Image>
+              <Description>takUsageWin2.unfoldableCard2.step3</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard3.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin2.unfoldableCard3.step1",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva45.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard3.step2",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva47.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard3.step3",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin2.unfoldableCard3.step1</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva45.png"></Image>
+              <Description>takUsageWin2.unfoldableCard3.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva47.png"></Image>
+              <Description>takUsageWin2.unfoldableCard3.step3</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard4.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin2.unfoldableCard4.step1",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva48.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard4.step2",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva49.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard4.step3",
-                  note: "takUsageWin2.unfoldableCard4.note1",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard4.step4",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva50.png",
-                  imageClasses: "mx-auto pr-5 w-[300px] p-4",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard4.step5",
-                  note: "takUsageWin2.unfoldableCard4.note2",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard4.step6",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard4.step7",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva55.png",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin2.unfoldableCard4.step1</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva48.png"></Image>
+
+              <Description>takUsageWin2.unfoldableCard4.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva49.png"></Image>
+
+              <Description>takUsageWin2.unfoldableCard4.step3</Description>
+              <Note>takUsageWin2.unfoldableCard4.note1</Note>
+
+              <Description>takUsageWin2.unfoldableCard4.step4</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva50.png"></Image>
+
+              <Description>takUsageWin2.unfoldableCard4.step5</Description>
+              <Note>takUsageWin2.unfoldableCard4.note2</Note>
+
+              <Description>takUsageWin2.unfoldableCard4.step6</Description>
+
+              <Description>takUsageWin2.unfoldableCard4.step7</Description>
+              <Image src="../../../../../../assets/takguides/wintak/Kuva55.png"></Image>
+
+            </UnfoldableCard>
             <UnfoldableCard
               title="takUsageWin2.unfoldableCardExample.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin2.unfoldableCardExample.step1",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva50.png",
-                  imageClasses: "mx-auto pr-5 w-[300px] p-4",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCardExample.step2",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva53.png",
-                  imageClasses: "mx-auto pr-5 w-[400px] p-4",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCardExample.step3",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva54.png",
-                  imageClasses: "mx-auto pr-5 w-[400px] p-4",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCardExample.step4",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva55.png",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin2.unfoldableCardExample.step1</Description>
+              <Image class="mx-auto pr-5 w-[300px] p-4" src="../../../../../../assets/takguides/wintak/Kuva50.png"></Image>
+              <Description>takUsageWin2.unfoldableCardExample.step2</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva53.png"></Image>
+              <Description>takUsageWin2.unfoldableCardExample.step3</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva54.png"></Image>
+              <Description>takUsageWin2.unfoldableCardExample.step4</Description>
+              <Image src="../../../../../../assets/takguides/wintak/Kuva55.png"></Image>
+            </UnfoldableCard>
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard5.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin2.unfoldableCard5.step1",
-                  note: "takUsageWin2.unfoldableCard5.note1",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin2.unfoldableCard5.step1</Description>
+              <Note>takUsageWin2.unfoldableCard5.note1</Note>
+            </UnfoldableCard>
             <UnfoldableCard
               title="takUsageWin2.unfoldableCard7.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin2.unfoldableCard7.step1",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva56.png",
-                  imageClasses: "mx-auto pr-5 w-[400px] p-4",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard7.step2",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva57.png",
-                  imageClasses: "mx-auto pr-5 w-[400px] p-4",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard7.step3",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva58.png",
-                  imageClasses: "mx-auto pr-5 w-[400px] p-4",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard7.step4",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva55.png",
-                },
-                {
-                  description: "takUsageWin2.unfoldableCard7.step5",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin2.unfoldableCard7.step1</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva56.png"></Image>
+
+              <Description>takUsageWin2.unfoldableCard7.step2</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva57.png"></Image>
+
+              <Description>takUsageWin2.unfoldableCard7.step3</Description>
+              <Image class="mx-auto pr-5 w-[400px] p-4" src="../../../../../../assets/takguides/wintak/Kuva58.png"></Image>
+
+              <Description>takUsageWin2.unfoldableCard7.step4</Description>
+              <Image src="../../../../../../assets/takguides/wintak/Kuva55.png"></Image>
+
+              <Description>takUsageWin2.unfoldableCard7.step5</Description>
+
+            </UnfoldableCard>
           </div>
         </CardsContainer>
         <NavigateButtons
           backUrl="/app/services/tak/usage/win1"
           forwardUrl="/app/services/tak/usage/win3"
-        />
+        ></NavigateButtons>
       </Layout>
     </div>
 </View>
