--- a/src/views/products/data/tak/usage/wintak/TakUsageWin3.html
+++ b/src/views/products/data/tak/usage/wintak/TakUsageWin3.html
@@ -23,19 +23,12 @@
             <UnfoldableCard
               title="takUsageWin3.unfoldableCard1.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin3.unfoldableCard1.step1",
-                },
-                {
-                  description: "takUsageWin3.unfoldableCard1.step2",
-                  note: "takUsageWin3.unfoldableCard1.note",
-                },
-                {
-                  description: "takUsageWin3.unfoldableCard1.step3",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin3.unfoldableCard1.step1</Description>
+              <Description>takUsageWin3.unfoldableCard1.step2</Description>
+              <Note>takUsageWin3.unfoldableCard1.note</Note>
+              <Description>takUsageWin3.unfoldableCard1.step3</Description>
+            </UnfoldableCard>
           </div>
         </CardsContainer>
         <NavigateButtons
