--- a/src/views/products/data/tak/usage/android/TakUsageAndroid1.html
+++ b/src/views/products/data/tak/usage/android/TakUsageAndroid1.html
@@ -1,5 +1,5 @@
 <View name="TakUsageAndroid1" path="usage/android1">
-    <UnfoldableCard class="pb-20">
+    <div class="pb-20">
       <Layout
         showNavbar="true"
         showFooter="false"
@@ -15,7 +15,7 @@
           <ServiceTakUsageCard></ServiceTakUsageCard>
         </CardsContainer>
         <CardsContainer>
-          <UnfoldableCard class="flex flex-col items-center w-full gap-2 justify-center p-5">
+          <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="ATAK"
               image="../../../../../../assets/icons/tak-logo.png"
@@ -24,54 +24,29 @@
             <UnfoldableCard
               title="TakUsageAndroid1.unfoldableCard1.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageAndroid1.unfoldableCard1.step1",
-                  imageSrc: "../../../../../../assets/takguides/atak/27-BaseMap.png",
-                  imageClasses: "m-3 w-[300px]",
-                },
-                {
-                  description: "TakUsageAndroid1.unfoldableCard1.step2",
-                  imageSrc: "../../../../../../assets/takguides/atak/Frame.png",
-                  imageClasses: "align-right w-[50px]",
-                },
-                {
-                  description: "TakUsageAndroid1.unfoldableCard1.step3",
-                  imageSrc: "../../../../../../assets/takguides/atak/Frame-1.png",
-                  imageClasses: "align-right w-[35px]",
-                },
-                {
-                  description: "TakUsageAndroid1.unfoldableCard1.step4",
-                  imageSrc: "../../../../../../assets/takguides/atak/Frame-2.png",
-                  imageClasses: "align-right w-[50px]",
-                },
-              ]}
-            ></UnfoldableCard>
+            >
+              <Description>TakUsageAndroid1.unfoldableCard1.step1</Description>
+              <Image class="m-3 w-[300px]" src="../../../../../../assets/takguides/atak/27-BaseMap.png"></Image>
+              <Description>TakUsageAndroid1.unfoldableCard1.step2</Description>
+              <Image class="align-right w-[50px]" src="../../../../../../assets/takguides/atak/Frame.png"></Image>
+              <Description>TakUsageAndroid1.unfoldableCard1.step3</Description>
+              <Image class="align-right w-[35px]" src="../../../../../../assets/takguides/atak/Frame-1.png"></Image>
+              <Description>TakUsageAndroid1.unfoldableCard1.step4</Description>
+              <Image class="align-right w-[50px]" src="../../../../../../assets/takguides/atak/Frame-2.png"></Image>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakUsageAndroid1.unfoldableCard2.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageAndroid1.unfoldableCard2.step1",
-                  imageSrc: "../../../../../../assets/takguides/atak/Frame-3.png",
-                  imageClasses: "align-right w-[40px]",
-                },
-                {
-                  description: "TakUsageAndroid1.unfoldableCard2.step2",
-                  imageSrc: "../../../../../../assets/takguides/atak/Frame-4.png",
-                  imageClasses: "align-right w-[50px]",
-                },
-                {
-                  description: "TakUsageAndroid1.unfoldableCard2.step3",
-                  imageSrc: "../../../../../../assets/takguides/atak/Frame-5.png",
-                  imageClasses: "align-right w-[50px]",
-                },
-                {
-                  imageSrc: "../../../../../../assets/takguides/atak/28-Map.png",
-                  imageClasses: "w-[300px]",
-                },
-              ]}
-            /></UnfoldableCard>
+            >
+              <Description>TakUsageAndroid1.unfoldableCard2.step1</Description>
+              <Image class="align-right w-[40px]" src="../../../../../../assets/takguides/atak/Frame-3.png"></Image>
+              <Description>TakUsageAndroid1.unfoldableCard2.step2</Description>
+              <Image class="align-right w-[50px]" src="../../../../../../assets/takguides/atak/Frame-4.png"></Image>
+              <Description>TakUsageAndroid1.unfoldableCard2.step3</Description>
+              <Image class="align-right w-[50px]" src="../../../../../../assets/takguides/atak/Frame-5.png"></Image>
+              <Image class="w-[300px]" src="../../../../../../assets/takguides/atak/28-Map.png"></Image>
+            </UnfoldableCard>
+          </div>
         </CardsContainer>
         <NavigateButtons
           backUrl="/app/services/tak/Usage"
