--- a/src/views/products/data/tak/usage/android/TakUsageAndroid2.html
+++ b/src/views/products/data/tak/usage/android/TakUsageAndroid2.html
@@ -24,75 +24,41 @@
             <UnfoldableCard
               title="TakUsageAndroid2.unfoldableCard1.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageAndroid2.unfoldableCard1.step1",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage1.png",
-                  imageClasses: "m-3 w-[300px]",
-                },
-              ]}
-            />
+            >
+              <Description>TakUsageAndroid2.unfoldableCard1.step1</Description>
+              <Image class="m-3 w-[300px]" src="../../../../../../assets/takguides/atak/atakusage1.png"></Image>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakUsageAndroid2.unfoldableCard2.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageAndroid2.unfoldableCard2.step1",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage1.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid2.unfoldableCard2.step2",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage3.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid2.unfoldableCard2.step3",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage3-1.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-              ]}
-            />
+            >
+              <Description>TakUsageAndroid2.unfoldableCard2.step1</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage1.png"></Image>
+              <Description>TakUsageAndroid2.unfoldableCard2.step2</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage3.png"></Image>
+              <Description>TakUsageAndroid2.unfoldableCard2.step3</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage3-1.png"></Image>
+
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakUsageAndroid2.unfoldableCard3.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageAndroid2.unfoldableCard3.step1",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage4.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid2.unfoldableCard3.step2",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage5.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid2.unfoldableCard3.step3",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage6.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid2.unfoldableCard3.step4",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage7.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid2.unfoldableCard3.step5",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage8.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid2.unfoldableCard3.step6",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage9.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid2.unfoldableCard3.step7",
-                  note: "TakUsageAndroid2.unfoldableCard3.note",
-                },
-              ]}
-            /></UnfoldableCard>
+            >
+              <Description>TakUsageAndroid2.unfoldableCard3.step1</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage4.png"></Image>
+              <Description>TakUsageAndroid2.unfoldableCard3.step2</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage5.png"></Image>
+              <Description>TakUsageAndroid2.unfoldableCard3.step3</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage6.png"></Image>
+              <Description>TakUsageAndroid2.unfoldableCard3.step4</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage7.png"></Image>
+              <Description>TakUsageAndroid2.unfoldableCard3.step5</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage8.png"></Image>
+              <Description>TakUsageAndroid2.unfoldableCard3.step6</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage9.png"></Image>
+              <Description>TakUsageAndroid2.unfoldableCard3.step7</Description>
+              <Note>TakUsageAndroid2.unfoldableCard3.note</Note>
+            </UnfoldableCard>
             <NavigateButtons
               backUrl="/app/services/tak/usage/android1"
               forwardUrl="/app/services/tak/usage/android3"
