--- a/src/views/products/data/tak/usage/android/TakUsageAndroid3.html
+++ b/src/views/products/data/tak/usage/android/TakUsageAndroid3.html
@@ -12,7 +12,7 @@
           progressNow="3"
         ></StatusBar>
         <CardsContainer>
-          <ServiceTakUsageCard />
+          <ServiceTakUsageCard></ServiceTakUsageCard>
         </CardsContainer>
         <CardsContainer>
           <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
@@ -24,70 +24,44 @@
             <UnfoldableCard
               title="TakUsageAndroid2.unfoldableCard1.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageAndroid2.unfoldableCard1.step1",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage10.png",
-                  imageClasses: "m-3 w-[300px]",
-                },
-              ]}
-            />
+            >
+              <Description>TakUsageAndroid2.unfoldableCard1.step1</Description>
+              <Image class="m-3 w-[300px]" src="../../../../../../assets/takguides/atak/atakusage10.png"></Image>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakUsageAndroid3.unfoldableCard2.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageAndroid3.unfoldableCard2.description1",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage10.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid3.unfoldableCard2.description2",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage11.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid3.unfoldableCard2.description3",
-                },
-              ]}
-            />
+            >
+              <Description>TakUsageAndroid3.unfoldableCard2.description1</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage10.png"></Image>
+              <Description>TakUsageAndroid3.unfoldableCard2.description2</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage11.png"></Image>
+              <Description>TakUsageAndroid3.unfoldableCard2.description3</Description>
+            </UnfoldableCard>
             <UnfoldableCard
               title="TakUsageAndroid3.unfoldableCard3.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "TakUsageAndroid3.unfoldableCard3.description1",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage12.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid3.unfoldableCard3.description2",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage13.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid3.unfoldableCard3.description3",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage14.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid3.unfoldableCard3.description4",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage15.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid3.unfoldableCard3.description5",
-                  imageSrc: "../../../../../../assets/takguides/atak/atakusage16.png",
-                  imageClasses: "m-3 w-[500px]",
-                },
-                {
-                  description: "TakUsageAndroid3.unfoldableCard3.description6",
-                },
-                {
-                  description: "TakUsageAndroid3.unfoldableCard3.description7",
-                },
-              ]}
-            />
+            >
+              <Description>TakUsageAndroid3.unfoldableCard3.description1</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage12.png"></Image>
+
+              <Description>TakUsageAndroid3.unfoldableCard3.description2</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage13.png"></Image>
+
+              <Description>TakUsageAndroid3.unfoldableCard3.description3</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage14.png"></Image>
+
+              <Description>TakUsageAndroid3.unfoldableCard3.description4</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage15.png"></Image>
+
+              <Description>TakUsageAndroid3.unfoldableCard3.description5</Description>
+              <Image class="m-3 w-[500px]" src="../../../../../../assets/takguides/atak/atakusage16.png"></Image>
+
+              <Description>TakUsageAndroid3.unfoldableCard3.description6</Description>
+
+              <Description>TakUsageAndroid3.unfoldableCard3.description7</Description>
+
+            </UnfoldableCard>
           </div>
         </CardsContainer>
         <NavigateButtons
