--- a/src/views/products/data/tak/usage/wintak/TakUsageWin4.html
+++ b/src/views/products/data/tak/usage/wintak/TakUsageWin4.html
@@ -23,36 +23,21 @@
             <UnfoldableCard
               title="takUsageWin4.unfoldableCard1.title"
               class="bg-backgroundLight"
-              steps={[
-                {
-                  description: "takUsageWin4.unfoldableCard1.step1",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva61.png",
-                  imageClasses: "m-3 w-[200px]",
-                },
-                {
-                  description: "takUsageWin4.unfoldableCard1.step2",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva62.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin4.unfoldableCard1.step3",
-                  imageSrc: "../../../../../../assets/takguides/wintak/Kuva63.png",
-                  imageClasses: "m-3 w-[400px]",
-                },
-                {
-                  description: "takUsageWin4.unfoldableCard1.step4",
-                },
-                {
-                  description: "takUsageWin4.unfoldableCard1.step5",
-                },
-                {
-                  description: "takUsageWin4.unfoldableCard1.step6",
-                },
-                {
-                  description: "takUsageWin4.unfoldableCard1.step7",
-                },
-              ]}
-            />
+            >
+              <Description>takUsageWin4.unfoldableCard1.step1</Description>
+              <Image class="m-3 w-[200px]" src="../../../../../../assets/takguides/wintak/Kuva61.png"></Image>
+
+              <Description>takUsageWin4.unfoldableCard1.step2</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva62.png"></Image>
+
+              <Description>takUsageWin4.unfoldableCard1.step3</Description>
+              <Image class="m-3 w-[400px]" src="../../../../../../assets/takguides/wintak/Kuva63.png"></Image>
+
+              <Description>takUsageWin4.unfoldableCard1.step4</Description>
+              <Description>takUsageWin4.unfoldableCard1.step5</Description>
+              <Description>takUsageWin4.unfoldableCard1.step6</Description>
+              <Description>takUsageWin4.unfoldableCard1.step7</Description>
+            </UnfoldableCard>
           </div>
         </CardsContainer>
         <NavigateButtons
