Fixed HTML formating and some content

--- a/src/views/products/data/tak/ServiceTak.html
+++ b/src/views/products/data/tak/ServiceTak.html
@@ -2,8 +2,9 @@
   <div class="service-tak">
     <CardsContainer>
       <FoldableCard
-         title="serviceTak.foldableCardTitle"
-         image="../../../../assets/icons/taklogo.png">
+        title="serviceTak.foldableCardTitle"
+        image="../../../../assets/icons/taklogo.png"
+      >
         <div class="flex flex-col items-center justify-center p-5">
           <ServiceInfoCard
             title="serviceTak.serviceInfoCardTitle"
@@ -62,7 +63,8 @@
               variant='{"width": "full"}'
               onClick='{"modal": "TakDownloadModal"}'
               class="m-1 px-3 bg-success text-white w-full"
-            >serviceTak.grabZipButton</Button>
+            >serviceTak.grabZipButton
+            </Button>
           </div>
         </div>
       </FoldableCard>
