--- a/src/views/products/data/tak/quickstart/ServiceTakQuickstart.html
+++ b/src/views/products/data/tak/quickstart/ServiceTakQuickstart.html
@@ -1,4 +1,7 @@
-<View name="ServiceTakQuickstart" path="quickstart">
+<View
+  name="ServiceTakQuickstart"
+  path="quickstart"
+>
   <div class="pb-10">
     <Layout
       showNavbar="true"
