--- a/src/views/products/data/tak/quickstart/ios/TakQuickstartIos2.html
+++ b/src/views/products/data/tak/quickstart/ios/TakQuickstartIos2.html
@@ -26,14 +26,20 @@
             class="bg-backgroundLight"
           >
             <Description>TakQuickstartIos2.unfoldableCard1.description1</Description>
-            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart1.png"></Image>
+            <Image
+              class="mx-auto pr-5 w-[240px] p-4"
+              src="../../../../../../assets/takguides/itak/itakquickstart1.png"
+            ></Image>
           </UnfoldableCard>
           <UnfoldableCard
             title="TakQuickstartIos2.unfoldableCard2.title"
             class="bg-backgroundLight"
           >
             <Description>TakQuickstartIos2.unfoldableCard2.description1</Description>
-            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart2.png"></Image>
+            <Image
+              class="mx-auto pr-5 w-[240px] p-4"
+              src="../../../../../../assets/takguides/itak/itakquickstart2.png"
+            ></Image>
             <Description>TakQuickstartIos2.unfoldableCard2.description2</Description>
           </UnfoldableCard>
           <UnfoldableCard
@@ -41,7 +47,10 @@
             class="bg-backgroundLight"
           >
             <Description>TakQuickstartIos2.unfoldableCard3.description1</Description>
-            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart3.png"></Image>
+            <Image
+              class="mx-auto pr-5 w-[240px] p-4"
+              src="../../../../../../assets/takguides/itak/itakquickstart3.png"
+            ></Image>
             <Description>TakQuickstartIos2.unfoldableCard3.description2</Description>
           </UnfoldableCard>
           <UnfoldableCard
@@ -49,11 +58,20 @@
             class="bg-backgroundLight"
           >
             <Description>TakQuickstartIos2.unfoldableCard4.description1</Description>
-            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart4.png"></Image>
+            <Image
+              class="mx-auto pr-5 w-[240px] p-4"
+              src="../../../../../../assets/takguides/itak/itakquickstart4.png"
+            ></Image>
             <Description>TakQuickstartIos2.unfoldableCard4.description2</Description>
-            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart5.png"></Image>
+            <Image
+              class="mx-auto pr-5 w-[240px] p-4"
+              src="../../../../../../assets/takguides/itak/itakquickstart5.png"
+            ></Image>
             <Description>TakQuickstartIos2.unfoldableCard4.description3</Description>
-            <Image class="mx-auto pr-5 w-[240px] p-4" src="../../../../../../assets/takguides/itak/itakquickstart7.png"></Image>
+            <Image
+              class="mx-auto pr-5 w-[240px] p-4"
+              src="../../../../../../assets/takguides/itak/itakquickstart7.png"
+            ></Image>
             <Description>TakQuickstartIos2.unfoldableCard4.description4</Description>
           </UnfoldableCard>
         </div>
