--- a/src/views/products/data/tak/usage/helpers/ServiceTakUsageCard.html
+++ b/src/views/products/data/tak/usage/helpers/ServiceTakUsageCard.html
@@ -2,7 +2,8 @@
   <div class="w-full m-1 p-0">
     <UnfoldableCard
       title="serviceTakUsageCard.title"
-      initialOpen="false">
+      initialOpen="false"
+    >
       <Description>serviceTakUsageCard.content</Description>
     </UnfoldableCard>
   </div>
