--- a/src/views/products/data/tak/usage/ServiceTakUsage.html
+++ b/src/views/products/data/tak/usage/ServiceTakUsage.html
@@ -1,4 +1,7 @@
-<View name="ServiceTakUsage" path="usage">
+<View
+  name="ServiceTakUsage"
+  path="usage"
+>
   <div class="pb-10">
     <Layout
       showNavbar="True"
@@ -11,7 +14,8 @@
         <CardsContainer>
           <ServiceInfoCard
             title="serviceTakUsageView.serviceInfoCardTitle"
-          >serviceTakUsageView.serviceInfoCardDetails</ServiceInfoCard>
+          >serviceTakUsageView.serviceInfoCardDetails
+          </ServiceInfoCard>
         </CardsContainer>
         <ServiceUsageCard>
           <ServiceTakUsageCard></ServiceTakUsageCard>
@@ -23,15 +27,18 @@
           <Card
             title="serviceTakUsageView.androidTitle"
             image="../../../../../assets/icons/android.svg"
-            url="/app/services/tak/usage/android1"></Card>
+            url="/app/services/tak/usage/android1"
+          ></Card>
           <Card
             title="serviceTakUsageView.iosTitle"
             image="../../../../../assets/icons/apple.svg"
-            url="/app/services/tak/usage/ios1"></Card>
+            url="/app/services/tak/usage/ios1"
+          ></Card>
           <Card
             title="serviceTakUsageView.windowsTitle"
             image="../../../../../assets/icons/windows.svg"
-            url="/app/services/tak/usage/win1"></Card>
+            url="/app/services/tak/usage/win1"
+          ></Card>
         </CardsContainer>
       </div>
     </Layout>
